--- a/index.html
+++ b/index.html
@@ -1,114 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Humayun Khan Portfolio</title>
-        <link rel="stylesheet" href="styles.css" />
-      </head>
-      <body>
-        <!-- Header -->
-        <header>
-          <h1>Humayun Khan</h1>
-          <nav>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About Me</a></li>
-              <li>
-                <a
-                  href="https://www.instagram.com/humayunkhan.1"
-                  target="_blank"
-                  >Contact</a
-                >
-              </li>
-              <li>
-                <a
-                  href="https://github.com/humayun-01/Flipflop-ecom.git"
-                  target="_blank"
-                  >GitHub</a
-                >
-              </li>
-            </ul>
-          </nav>
-        </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Humayun Khan Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <h1>Humayun Khan</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="https://www.instagram.com/humayunkhan.1" target="_blank">Contact</a></li>
+        <li><a href="https://github.com/humayun-01/Flipflop-ecom.git" target="_blank">GitHub</a></li>
+      </ul>
+    </nav>
+  </header>
 
-        <!-- Intro Section -->
-        <section class="intro" id="home">
-          <div class="intro-text">
-            <p>
-              Hey! My name is Humayun Khan — passionate about building web
-              applications and solving real world problems. Always eager to
-              learn and innovate!
-            </p>
-          </div>
-          <div class="photo">
-            <!-- Replace with your photo -->
-            <img src="hk.png" alt="Humayun Khan" />
-          </div>
-        </section>
+  <!-- Intro Section -->
+  <section class="intro" id="home">
+    <div class="intro-text">
+      <p>
+        Hey! My name is Humayun Khan — passionate about building web
+        applications and solving real world problems. Always eager to
+        learn and innovate!
+      </p>
+    </div>
+    <div class="photo">
+      <img src="hk.png" alt="Humayun Khan" />
+    </div>
+  </section>
 
-        <!-- Skills Section -->
-        <section class="skills">
-          <h2>Skills</h2>
-          <div class="skills-list">
-            <div class="skill-box">HTML</div>
-            <div class="skill-box">CSS</div>
-            <div class="skill-box">JavaScript</div>
-            <div class="skill-box">Tailwind</div>
-            <div class="skill-box">React</div>
-            <div class="skill-box">Node.js</div>
-            <div class="skill-box">SQL</div>
-          </div>
-        </section>
+  <!-- Skills Section -->
+  <section class="skills">
+    <h2>Skills</h2>
+    <div class="skills-list">
+      <div class="skill-box">HTML</div>
+      <div class="skill-box">CSS</div>
+      <div class="skill-box">JavaScript</div>
+      <div class="skill-box">Tailwind</div>
+      <div class="skill-box">React</div>
+      <div class="skill-box">Node.js</div>
+      <div class="skill-box">SQL</div>
+    </div>
+  </section>
 
-        <!-- About Me Section -->
-        <section class="about" id="about">
-          <h2>About Me</h2>
-          <p>
-            I am eager to apply my expertise in web development.My skill set
-            includes
-            <br />
-            Html,Css,Javascript,Tailwind,React,Node.js,Sql. enabling me to build
-            sclable and efficient applications.
-            <br />
-            Excited to kick start my Carrer, i am passionate about Contributing
-            to real-world Projects,collaborating with dynamic teams
-            <br />
-            and continuosly enhance my knowledege.
-            <br />
-            This Portfolio showcase my ability to develop
-            responsive,user-friendly websites and applications.
-            <br />
-            Explore my projects to see how i can bring value to your team.
-          </p>
-          <div class="buttons">
-            <label class="btn upload-btn">
-              <a href="Resume...pdf" target="_blank">Resume</a>
-            </label>
-            <a
-              href="https://github.com/humayun-01/Flipflop-ecom.git"
-              target="_blank"
-              class="btn github-btn"
-              >Visit GitHub</a
-            >
-          </div>
-        </section>
+  <!-- About Me Section -->
+  <section class="about" id="about">
+    <h2>About Me</h2>
+    <p>
+      I am eager to apply my expertise in web development. My skill set
+      includes Html, Css, Javascript, Tailwind, React, Node.js, and Sql,
+      enabling me to build scalable and efficient applications.
+      <br />
+      Excited to kick start my career, I am passionate about contributing
+      to real-world projects, collaborating with dynamic teams
+      and continuously enhancing my knowledge.
+      <br />
+      This portfolio showcases my ability to develop
+      responsive, user-friendly websites and applications.
+      <br />
+      Explore my projects to see how I can bring value to your team.
+    </p>
+    <div class="buttons">
+      <label class="btn upload-btn">
+        <a href="Resume.pdf" target="_blank">Resume</a>
+      </label>
+      <a href="https://github.com/humayun-01/Flipflop-ecom.git" target="_blank" class="btn github-btn">
+        Visit GitHub
+      </a>
+    </div>
+  </section>
 
-        <!-- Footer -->
-        <footer id="contact">
-          <p>Contact: humayun07860786@gmail.com</p>
-          <p>&copy; 2025 Humayun Khan. All rights reserved.</p>
-        </footer>
-      </body>
-    </html>
-  </body>
+  <!-- Footer -->
+  <footer id="contact">
+    <p>Contact: humayun07860786@gmail.com</p>
+    <p>&copy; 2025 Humayun Khan. All rights reserved.</p>
+  </footer>
+</body>
 </html>
